--- a/assignment3.html
+++ b/assignment3.html
@@ -60,10 +60,10 @@
             <a
                 href="https://javascript.plainenglish.io/the-legendary-and-famous-software-engineer-from-google-506526be8dff">Article
                 2 </a>
-        </li>
-        <li>
-            <a href="https://wesodonnell.medium.com/meet-the-russian-who-saved-humanity-from-extinction-da8189fccc">Article
+        </li>ell.medium.com/meet-the-russian-who-saved-humanity-from-extinction-da8189fccc">Article
                 3</a>
+        <li>
+            <a href="https://wesodonn
         </li>
         <li>
             <a
